# global_hotkey

./: .gitignore  .gitmodules  .markdownlint.json  CMakeLists.txt  CMakePresets.json  README.md  install.bat  install.sh  install_for_wayland.sh  install_for_x11.sh  install_on_wayland.sh
.github/workflows/: ci.yml
cmake/: global_hotkeyConfig.cmake.in
cmake/templates/: config.hpp.in
doc/: README_EN.md  README_ZH.md
example/: CMakeLists.txt
example/event_queue/: CMakeLists.txt  block_queue.hpp  def.hpp  defines.hpp  defs.hpp  event.hpp  event_work.cpp  event_work.hpp  main.cpp  utility.hpp  utilitys.cpp  utilitys.hpp
example/simple/: CMakeLists.txt  main.cpp
include/global_hotkey/: def.hpp  defines.hpp  global_hotkey.hpp  global_hotkey_manager.hpp  hook_global_hotkey_manager.hpp  key.hpp  key_combination.hpp  register_global_hotkey_manager.hpp  return_code.hpp
script/: build-example.bat  build-example.sh
scripts/: build-example.bat
src/global_hotkey_manager/: ghm_private.cpp  ghm_private.hpp  global_hotkey_manager.cpp
src/hook_global_hotkey_manager/: hook_ghm_private.cpp  hook_ghm_private.hpp  hook_global_hotkey_manager.cpp
src/key/: key.cpp  key_private.hpp  key_private_linux.cpp  key_private_mac.cpp  key_private_win.cpp  key_private_x11.cpp  key_private_x11.hpp
src/key_combination/: key_combination.cpp
src/register_global_hotkey_manager/: register_ghm_private.cpp  register_ghm_private.hpp  register_ghm_private_mac.cpp  register_ghm_private_mac.hpp  register_ghm_private_win.cpp  register_ghm_private_win.hpp  register_ghm_private_x11.cpp  register_ghm_private_x11.hpp  register_global_hotkey_manager.cpp
